--- a/event/templates/event/event_form.html
+++ b/event/templates/event/event_form.html
@@ -9,7 +9,7 @@
             <div class="panel panel-default">
                 <h3>Update Event Details</h3>
                 {% if error_message %}
-                    <p><strong>{{ error_message }}</strong></p>
+                    <p><strong class="text-danger">{{ error_message }}</strong></p>
                 {% endif %}
 
                 <form class="form-horizontal" role="form" method="post" enctype="multipart/form-data">
