--- a/event/templates/event/detail.html
+++ b/event/templates/event/detail.html
@@ -3,112 +3,79 @@
 {% block title %}{{ event.name }}{% endblock %}
 {% block events_active %}active{% endblock %}
 
+
 {% block body %}
-<div class="container-fluid events-container">
-
+<div class="container event-detail">
   <div class="row">
-
-    <!-- Left Column -->
-    <div class="col-sm-4 col-md-3">
-      <div class="panel panel-default">
-        <div class="panel-body text-center">
+    <!-- Event Card -->
+    <div class="col-md-4">
+      <div class="card event-card d-flex flex-column" style="height:100%;">
+        <div class="event-image-top">
           {% if event.image %}
-            <img src="{{ event.image.url }}" class="img-responsive" alt="{{ event.name }}">
+            <img src="{{ event.image.url }}" class="card-img-top img-responsive event-card-img" alt="{{ event.name }}">
           {% else %}
-            <img src="{% static 'event/images/default_event.jpg' %}" class="img-responsive" alt="Event Image">
+            <img src="{% static 'event/images/default_event.jpg' %}" class="card-img-top img-responsive event-card-img" alt="Event Image">
           {% endif %}
-          <h1>{{ event.name }}</h1>
-          <h4>{{ event.location }}</h4>
-          <h2>{{ event.manager.first_name }}</h2>
+        </div>
+        <div class="card-body text-center" style="flex:1; display:flex; flex-direction:column; justify-content:flex-start;">
+          <h2 class="card-title event-card-title">{{ event.name }}</h2>
+          <p class="card-text event-card-location">{{ event.location }}</p>
+          <p class="card-text event-card-manager">Manager: <strong>{{ event.manager.first_name }}</strong></p>
+          <div class="info-bar event-info-bar">
+            <span title="Date"><i class="glyphicon glyphicon-calendar"></i> {{ event.date }}</span>
+            <span title="Time"><i class="glyphicon glyphicon-time"></i> {{ event.time }}</span>
+            <span title="Fare"><span class="event-inr">&#8377;</span> {{ event.fare }}</span>
+          </div>
+          <div style="height:32px;"></div>
+          <div class="btn-group btn-group-justified event-action-group" role="group" style="margin-top:auto;">
+            {% if event.manager.id == request.user.id %}
+              <a href="{% url 'event:update_event' event.id %}" class="btn btn-info event-btn-update" title="Update Event"><i class="glyphicon glyphicon-edit"></i> Update</a>
+              <a href="{% url 'event:invite_users' event.id %}" class="btn btn-warning event-btn-invite" title="Send Invitations"><i class="glyphicon glyphicon-envelope"></i> Invite</a>
+            {% else %}
+              <a href="{% url 'event:buy_ticket' event.id %}" class="btn btn-success event-btn-buy" title="Buy Ticket">Buy Ticket</a>
+            {% endif %}
+          </div>
         </div>
       </div>
-
-      <!-- Action Buttons -->
-      {% if event.manager.id == request.user.id %}
-        <!-- Update Event -->
-        <form action="{% url 'event:update_event' event.id %}" method="get" style="display:inline;">
-          {% csrf_token %}
-          <input type="hidden" name="event_id" value="{{ event.id }}">
-          <button type="submit" class="btn btn-default btn-block">
-            <span class="glyphicon glyphicon-edit"></span>
-            <strong> Update Event Details</strong>
-          </button>
-        </form>
-        <br>
-
-        <!-- Send Invitations -->
-        <form action="{% url 'event:invite_users' event.id %}" method="post" style="display:inline;">
-          {% csrf_token %}
-          <input type="hidden" name="event_id" value="{{ event.id }}">
-          <button type="submit" class="btn btn-default btn-block">
-            <span class="glyphicon glyphicon-envelope"></span>
-            <strong> Send Invitations</strong>
-          </button>
-        </form>
-      {% else %}
-        <!-- Buy Ticket -->
-        <form action="{% url 'event:buy_ticket' event.id %}" method="get" style="display:inline;">
-          {% csrf_token %}
-          <input type="hidden" name="event_id" value="{{ event.id }}">
-          <button type="submit" class="btn btn-default btn-block">
-            <span class="glyphicon glyphicon-usd"></span>
-            <strong> Buy Ticket</strong>
-          </button>
-        </form>
-      {% endif %}
     </div>
-
-    <!-- Right Column -->
-    <div class="col-sm-8 col-md-9">
-
-      <!-- Event Details -->
-      <div class="panel panel-info">
-        <div class="panel-heading">
-          {{ event.name }}
-        </div>
+    <!-- Details & Attendees -->
+    <div class="col-md-8">
+      <div class="panel panel-info event-panel-details">
+        <div class="panel-heading event-panel-heading">Event Details</div>
         <div class="panel-body">
-          <h3>Location: {{ event.location }}</h3>
-          <h4>Date: {{ event.date }}</h4>
-          <h4>Time: {{ event.time }}</h4>
-          <h4>Fare: Rs. {{ event.fare }}/-</h4>
-          <h4>
-            Manager’s Profile:
-            <a href="{% url 'event:user_profile' event.manager.id %}">
-              {{ event.manager.first_name }}
-            </a>
-          </h4>
+          <div class="event-detail-row"><strong>Location:</strong> {{ event.location }}</div>
+          <div class="event-detail-row"><strong>Date:</strong> {{ event.date }}</div>
+          <div class="event-detail-row"><strong>Time:</strong> {{ event.time }}</div>
+          <div class="event-detail-row"><strong>Fare:</strong> <span class="event-inr">&#8377;</span> {{ event.fare }}/-</div>
+          <div class="event-detail-row"><strong>Manager:</strong> {{ event.manager.first_name }}</div>
         </div>
       </div>
-
-      <!-- Attendees & Invitees -->
-      <div class="panel panel-info">
-        <div class="panel-heading">
-          {{ event.name }}'s Attendees and Invitees
-        </div>
+      <div class="panel panel-info event-panel-attendees">
+        <div class="panel-heading event-panel-heading">Attendees & Invitees</div>
         <div class="panel-body">
           {% if tickets %}
-            {% for ticket in tickets %}
-              <h4>
-                User Name: {{ ticket.attendee.first_name }} {{ ticket.attendee.last_name }}
-              </h4>
-              <h4>
-                Type:
-                {% if ticket.flag %}
-                  Ticket
-                {% else %}
-                  Invitation
-                {% endif %}
-              </h4>
-              <br>
-            {% endfor %}
+            <table class="table table-striped table-bordered event-table">
+              <thead>
+                <tr>
+                  <th>User Name</th>
+                  <th>Type</th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for ticket in tickets %}
+                  <tr>
+                    <td>{{ ticket.attendee.first_name }} {{ ticket.attendee.last_name }}</td>
+                    <td>{% if ticket.flag %}Ticket{% else %}Invitation{% endif %}</td>
+                  </tr>
+                {% endfor %}
+              </tbody>
+            </table>
           {% else %}
             <p>No attendees yet.</p>
           {% endif %}
         </div>
       </div>
-
     </div>
   </div>
-
 </div>
 {% endblock %}
