--- a/event/templates/event/form_template.html
+++ b/event/templates/event/form_template.html
@@ -1,16 +1,11 @@
 {% for field in form %}
 <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-        <span class="text-danger small">{{ field.errors }}</span>
-    </div>
-    <label class="control-label col-sm-2">
-        {{ field.label_tag }}
-        {% if field.field.required %}
-            <span class="text-danger">*</span>
-        {% endif %}
+    <label class="control-label col-sm-2" style="text-align:right;">
+        {{ field.label }}{% if field.field.required %}<span class="text-danger">*</span>{% endif %}
     </label>
     <div class="col-sm-10">
         {{ field }}
+        <span class="text-danger small">{{ field.errors }}</span>
     </div>
 </div>
 {% endfor %}
