--- a/event/templates/event/get_past_events.html
+++ b/event/templates/event/get_past_events.html
@@ -4,28 +4,32 @@
 {% block past_events_active %}active{% endblock %}
 
 {% block body %}
-<div class="events-container container-fluid" style="box-sizing: border-box;">
-
-  <!-- Events -->
+<div class="container event-home">
   <div class="row">
     <div class="col-sm-12">
-      <h3>Past Events</h3>
+      <h3 class="event-home-title">Past Events</h3>
     </div>
-
+  </div>
+  <div class="row event-home-list">
     {% if events %}
       {% for event in events %}
-        <div class="col-sm-4 col-lg-2">
-          <div class="thumbnail">
-            <img src="{% static 'event/images/default_event.jpg' %}" class="img-responsive" alt="Event Image">
-            <div class="caption">
-              <h2>{{ event.name }}</h2>
-              <h4>{{ event.manager.first_name }} {{ event.manager.last_name }}</h4>
-              <!-- View Details -->
-              <a href="{% url 'event:detail' event.id %}" class="btn btn-primary btn-sm" role="button">View Details</a>
+        <div class="col-md-3 col-sm-6">
+          <div class="card event-home-card">
+            <div class="event-home-image">
+              {% if event.image %}
+                <img src="{{ event.image.url }}" class="img-responsive event-home-card-img" alt="{{ event.name }}">
+              {% else %}
+                <img src="{% static 'event/images/default_event.jpg' %}" class="img-responsive event-home-card-img" alt="Event Image">
+              {% endif %}
+            </div>
+            <div class="card-body text-center">
+              <h3 class="event-home-card-title">{{ event.name }}</h3>
+              <p class="event-home-card-manager">Manager: {{ event.manager.first_name }} {{ event.manager.last_name }}</p>
+              <p class="event-home-card-fare">Fare: <span class="event-inr">&#8377;</span> {{ event.fare }}/-</p>
+              <a href="{% url 'event:detail' event.id %}" class="btn btn-primary event-home-btn-details" role="button">View Details</a>
             </div>
           </div>
         </div>
-        {% cycle '' '' '' '' '' '' '<div class="clearfix visible-lg"></div>' %}
       {% endfor %}
     {% else %}
       <div class="col-sm-12">
@@ -33,6 +37,6 @@
       </div>
     {% endif %}
   </div>
-
+</div>
 </div>
 {% endblock %}
