--- a/event/templates/event/home.html
+++ b/event/templates/event/home.html
@@ -2,13 +2,10 @@
 {% block events_active %} active {% endblock %}
 
 {% block body %}
-<div class="events-container container-fluid" style="box-sizing: border-box;">
-
-    <!-- Events -->
+<div class="container event-home">
     <div class="row">
         <div class="col-sm-12">
-            <!-- Welcome / Search heading -->
-            <h3>
+            <h3 class="event-home-title">
                 {% if query %}
                     Searched Events
                 {% else %}
@@ -16,38 +13,33 @@
                 {% endif %}
             </h3>
         </div>
-
+    </div>
+    <div class="row event-home-list">
         {% if events %}
             {% for event in events %}
-                <div class="col-sm-4 col-lg-2">
-                    <div class="thumbnail">
-                        <img src="{{ event.image.url }}" class="img-responsive" alt="{{ event.name }}">
-                        <div class="caption">
-                            <h2>{{ event.name }}</h2>
-                            <h4>{{ event.manager.first_name }} {{ event.manager.last_name }}</h4>
-                            <!-- View Details -->
-                            <a href="{% url 'event:detail' event.id %}" class="btn btn-primary btn-sm" role="button">
-                                View Details
-                            </a>
+                <div class="col-md-3 col-sm-6">
+                    <div class="card event-home-card">
+                        <div class="event-home-image">
+                            <img src="{{ event.image.url }}" class="img-responsive event-home-card-img" alt="{{ event.name }}">
+                        </div>
+                        <div class="card-body text-center">
+                            <h3 class="event-home-card-title">{{ event.name }}</h3>
+                            <p class="event-home-card-manager">Manager: {{ event.manager.first_name }} {{ event.manager.last_name }}</p>
+                            <p class="event-home-card-fare">Fare: <span class="event-inr">&#8377;</span> {{ event.fare }}/-</p>
+                            <a href="{% url 'event:detail' event.id %}" class="btn btn-primary event-home-btn-details" role="button">View Details</a>
                         </div>
                     </div>
                 </div>
-                {% cycle '' '' '' '' '' '<div class="clearfix visible-lg"></div>' %}
             {% endfor %}
         {% elif query %}
-            <br>
-            <!-- Error message -->
-            <h3 class="error_message">
-                <strong>Search did not match any event...</strong>
-            </h3>
+            <div class="col-sm-12">
+                <h3 class="error_message"><strong>Search did not match any event...</strong></h3>
+            </div>
         {% else %}
             <div class="col-sm-12">
-                <h3 class="error_message">
-                    <strong>Search did not match any event...</strong>
-                </h3>
+                <h3 class="error_message"><strong>Search did not match any event...</strong></h3>
             </div>
         {% endif %}
     </div>
-
 </div>
 {% endblock %}
