--- a/event/templates/event/register.html
+++ b/event/templates/event/register.html
@@ -4,33 +4,31 @@
 
 
 {% block body %}
-<div style="min-height: 100vh; display: flex; align-items: center; justify-content: center;">
-    <div style="width: 100%; max-width: 700px;">
-        <div class="panel panel-default">
-            <div class="panel-body">
-                <h3>Register for an Account</h3>
-                {% if error_message %}
-                    <p><strong>{{ error_message }}</strong></p>
-                {% endif %}
-                <form class="form-horizontal" role="form" action="" method="post" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    {% with register_form as form %}
-                        {% include "event/form_template.html" %}
-                    {% endwith %}
-                    {% with profile_form as form %}
-                        {% include "event/form_template.html" %}
-                    {% endwith %}
-                    <div class="form-group">
-                        <div class="col-sm-offset-2 col-sm-10">
-                            <button type="submit" class="btn btn-success">Register</button>
-                        </div>
+<div class="container" style="max-width:700px; margin-top:70px; margin-bottom:10px;">
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <h3>Register for an Account</h3>
+            {% if error_message %}
+                <p><strong class="text-danger">{{ error_message }}</strong></p>
+            {% endif %}
+            <form class="form-horizontal" role="form" action="" method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                {% with register_form as form %}
+                    {% include "event/form_template.html" %}
+                {% endwith %}
+                {% with profile_form as form %}
+                    {% include "event/form_template.html" %}
+                {% endwith %}
+                <div class="form-group text-center">
+                    <div class="col-sm-12">
+                        <button type="submit" class="btn btn-success">Register</button>
                     </div>
-                </form>
-            </div>
-            <div class="panel-footer">
-                Already have an account? 
-                <a href="{% url 'event:login_user' %}">Click here</a> to login.
-            </div>
+                </div>
+            </form>
+        </div>
+        <div class="panel-footer">
+            Already have an account? 
+            <a href="{% url 'event:login_user' %}">Click here</a> to login.
         </div>
     </div>
 </div>
